add Solution Javasyntax task 1601